--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>WDD131</title>
 </head>
 <body>
+    <header>
+        <h1>WDD131 - April Cleaver</h1>
+    </header>
     
 </body>
 </html>
