Finished homepage assignment

--- a/index.html
+++ b/index.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD131</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - April Cleaver</title>
+    <meta name="description" content="April Cleaver's Homepage for WDD131 - Dynamic Web Fundamentals">
+    <meta name="author" content="April Cleaver">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Outfit:wght@100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-   
+    <header>
+        <p><span class="course-title">WDD 131 - Dynamic Web Fundamentals</span></p>
+        <nav>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/aprcleaver/">LinkedIn</a></li>
+                <li><a href="https://byupw.instructure.com/">Canvas</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/ether/12?lang=eng&id=p27#p27">Scripture</a></li>
+                <li><a href="#">Final Project</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>✨ April Cleaver ✨</h1>
+        <section class="card">
+            <div class="about">
+                <h2>About Me</h2>
+                <p>Hi there! I'm April. I grew up in El Paso, Texas and currently live with my family in the beautiful Pacific Northwest. My husband and I have three sons, and I've been homeschooling them since 2017. Now I'm studying software development through BYU-Pathway and we are all learning together. I enjoy hiking, drawing, jumping rope, and spending time with my family.</p>
+                <img class="profile" src="images/april-cleaver-headshot.webp" alt="April Cleaver">
+            </div>
+            <div class="location">
+                <h3>Kingston, WA</h3>
+                <figure>
+                    <img class="flag" src="images/wa-state-flag.webp" alt="Washington state flag">
+                    <figcaption>Official flag of Washington State</figcaption>
+                </figure>
+                <p>Kingston is an unincorporated community and census-designated place in Kitsap County, Washington, United States. The population was 2,515 at the 2020 census. Kingston is along the shores of Appletree Cove and Puget Sound, and is home to a major Washington State Ferry terminal linking it to Edmonds. (<a href="https://en.wikipedia.org/wiki/Kingston,_Washington">Wikipedia</a>)</p>
+            </div>
+        </section>
+        <section class="card resources">
+            <h2>Web Dev Resources</h2>
+            <ul>
+                <li><a href="">Dev.to Community</a></li>
+                <li><a href="">Smashing Magazine</a></li>
+                <li><a href="">CSS Tricks</a></li>
+                <li><a href="">W3 Schools</a></li>
+                <li><a href="">Udemy</a></li>
+                <li><a href="">Image Placeholder</a></li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>© <span id="currentyear"></span> April Cleaver | Washington, USA </p>
+        <p id="lastModified"></p>
+    </footer>
 </body>
+
 </html>
