--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Outfit:wght@100..900&display=swap"
         rel="stylesheet">
+    <script src="scripts/getdates.js" defer></script>
 </head>
 
 <body>
