--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <p><span class="course-title">WDD 131 - Dynamic Web Fundamentals</span></p>
+        <span id="course-title">WDD 131 - Dynamic Web Fundamentals</span>
         <nav>
             <ul>
                 <li><a href="https://www.linkedin.com/in/aprcleaver/">LinkedIn</a></li>
@@ -33,7 +33,7 @@
             <div class="about">
                 <h2>About Me</h2>
                 <p>Hi there! I'm April. I grew up in El Paso, Texas and currently live with my family in the beautiful Pacific Northwest. My husband and I have three sons, and I've been homeschooling them since 2017. Now I'm studying software development through BYU-Pathway and we are all learning together. I enjoy hiking, drawing, jumping rope, and spending time with my family.</p>
-                <img class="profile" src="images/april-cleaver-headshot.webp" alt="April Cleaver">
+                <img class="profile" src="images/april-cleaver.webp" alt="April Cleaver">
             </div>
             <div class="location">
                 <h3>Kingston, WA</h3>
@@ -47,12 +47,12 @@
         <section class="card resources">
             <h2>Web Dev Resources</h2>
             <ul>
-                <li><a href="">Dev.to Community</a></li>
-                <li><a href="">Smashing Magazine</a></li>
-                <li><a href="">CSS Tricks</a></li>
-                <li><a href="">W3 Schools</a></li>
-                <li><a href="">Udemy</a></li>
-                <li><a href="">Image Placeholder</a></li>
+                <li><a href="https://squoosh.app/">Squoosh Image Optimization</a></li>
+                <li><a href="https://coolors.co/">Coolors Color Palette Generator</a></li>
+                <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
+                <li><a href="https://www.w3schools.com/">W3 Schools</a></li>
+                <li><a href="https://www.udemy.com/">Udemy</a></li>
+                <li><a href="https://developer.mozilla.org/en-US/">MDN</a></li>
             </ul>
         </section>
     </main>
