--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Dynamic Web Fundamentals - April Cleaver</title>
-    <meta name="description" content="April Cleaver's Homepage for WDD131 - Dynamic Web Fundamentals">
+    <meta name="description" content="April Cleaver's Homepage for the WDD131 - Dynamic Web Fundamentals class at BYU-Idaho">
     <meta name="author" content="April Cleaver">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
