--- a/temples.html
+++ b/temples.html
@@ -31,47 +31,47 @@
     <main>
         <h1>Home</h1>
         <figure>
-            <img src="https://placehold.co/200x200/png" alt="">
+            <img src="images/seattle-temple.webp" alt="">
                 <figcaption>Seattle WA, Temple</figcaption>
             </img>
         </figure>
         <figure>
-            <img src="https://placehold.co/200x200/png" alt="">
+            <img src="images/seattle-temple.webp" alt="">
                 <figcaption>Seattle WA, Temple</figcaption>
             </img>
         </figure>
         <figure>
-            <img src="https://placehold.co/200x200/png" alt="">
+            <img src="images/seattle-temple.webp" alt="">
                 <figcaption>Seattle WA, Temple</figcaption>
             </img>
         </figure>
         <figure>
-            <img src="https://placehold.co/200x200/png" alt="">
+            <img src="images/seattle-temple.webp" alt="">
                 <figcaption>Seattle WA, Temple</figcaption>
             </img>
         </figure>
         <figure>
-            <img src="https://placehold.co/200x200/png" alt="">
+            <img src="images/seattle-temple.webp" alt="">
                 <figcaption>Seattle WA, Temple</figcaption>
             </img>
         </figure>
         <figure>
-            <img src="https://placehold.co/200x200/png" alt="">
+            <img src="images/seattle-temple.webp" alt="">
                 <figcaption>Seattle WA, Temple</figcaption>
             </img>
         </figure>
         <figure>
-            <img src="https://placehold.co/200x200/png" alt="">
+            <img src="images/seattle-temple.webp" alt="">
                 <figcaption>Seattle WA, Temple</figcaption>
             </img>
         </figure>
         <figure>
-            <img src="https://placehold.co/200x200/png" alt="">
+            <img src="images/seattle-temple.webp" alt="">
                 <figcaption>Seattle WA, Temple</figcaption>
             </img>
         </figure>
         <figure>
-            <img src="https://placehold.co/200x200/png" alt="">
+            <img src="images/seattle-temple.webp" alt="">
                 <figcaption>Seattle WA, Temple</figcaption>
             </img>
         </figure>
