stray img tag fixes

--- a/temples.html
+++ b/temples.html
@@ -31,49 +31,40 @@
     <main>
         <h1>Home</h1>
         <figure>
-            <img src="images/seattle-temple.webp" alt="">
+            <img src="images/seattle-temple.webp" alt="Seattle Washington Temple">
                 <figcaption>Seattle WA, Temple</figcaption>
-            </img>
         </figure>
         <figure>
-            <img src="images/seattle-temple.webp" alt="">
+            <img src="images/seattle-temple.webp" alt="Seattle Washington Temple">
                 <figcaption>Seattle WA, Temple</figcaption>
-            </img>
         </figure>
         <figure>
-            <img src="images/seattle-temple.webp" alt="">
+            <img src="images/seattle-temple.webp" alt="Seattle Washington Temple">
                 <figcaption>Seattle WA, Temple</figcaption>
-            </img>
         </figure>
         <figure>
-            <img src="images/seattle-temple.webp" alt="">
+            <img src="images/seattle-temple.webp" alt="Seattle Washington Temple">
                 <figcaption>Seattle WA, Temple</figcaption>
-            </img>
         </figure>
         <figure>
-            <img src="images/seattle-temple.webp" alt="">
+            <img src="images/seattle-temple.webp" alt="Seattle Washington Temple">
                 <figcaption>Seattle WA, Temple</figcaption>
-            </img>
         </figure>
         <figure>
-            <img src="images/seattle-temple.webp" alt="">
+            <img src="images/seattle-temple.webp" alt="Seattle Washington Temple">
                 <figcaption>Seattle WA, Temple</figcaption>
-            </img>
         </figure>
         <figure>
-            <img src="images/seattle-temple.webp" alt="">
+            <img src="images/seattle-temple.webp" alt="Seattle Washington Temple">
                 <figcaption>Seattle WA, Temple</figcaption>
-            </img>
         </figure>
         <figure>
-            <img src="images/seattle-temple.webp" alt="">
+            <img src="images/seattle-temple.webp" alt="Seattle Washington Temple">
                 <figcaption>Seattle WA, Temple</figcaption>
-            </img>
         </figure>
         <figure>
-            <img src="images/seattle-temple.webp" alt="">
+            <img src="images/seattle-temple.webp" alt="Seattle Washington Temple">
                 <figcaption>Seattle WA, Temple</figcaption>
-            </img>
         </figure>
     </main>
     <footer>
