--- a/temples.html
+++ b/temples.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temples Picture Album</title>
+    <title>Temple Picture Album</title>
     <meta name="description" content="Responsive LDS Temples Picture Album designed for WDD131 - Dynamic Web Fundamentals class at BYU-Idaho.">
     <meta name="author" content="April Cleaver">
     <link rel="stylesheet" href="styles/temples.css">
