added JS windChill function

--- a/place.html
+++ b/place.html
@@ -34,10 +34,10 @@
         <section class="weather">
             <h2>Weather</h2>
             <img class="icon cloud" src="images/wind-icon.svg" alt="cloud and wind icon" width="80">
-            <p><span class="label">Temperature:</span> 42°F</p>
+            <p><span class="label">Temperature:</span> 5.5°C</p>
             <p><span class="label">Conditions:</span> Windy</p>
-            <p><span class="label">Wind:</span> 21 mph</p>
-            <p><span class="label">Wind Chill:</span> 18°</p>
+            <p><span class="label">Wind:</span> 33.7 kph</p>
+            <p><span class="label">Wind Chill:</span> <span id="chill"></span>°C</p>
         </section>
     </main>
     <footer>
