--- a/place.html
+++ b/place.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>W3 Assignment: Country Page</title>
-    <meta name="description" content="Week 3 Country Page Assignment for WDD131 - Dynamic Web Fundamentals at BYU-Idaho">
+    <title>W3 Country Page: Scotland</title>
+    <meta name="description" content="Week 3 Country Page Assignment (Scotland) for WDD131 - Dynamic Web Fundamentals at BYU-Idaho">
     <meta name="author" content="April Cleaver">
     <link rel="stylesheet" href="styles/place.css">
     <script src="scripts/place.js" defer></script>
