--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temple Picture Album</title>
-    <meta name="description" content="Responsive LDS Temples Picture Album designed for WDD131 - Dynamic Web Fundamentals class at BYU-Idaho.">
+    <title>Filtered Temple Picture Album</title>
+    <meta name="description" content="Filtered Responsive LDS Temples Picture Album designed for WDD131 - Dynamic Web Fundamentals class at BYU-Idaho.">
     <meta name="author" content="April Cleaver">
     <link rel="stylesheet" href="styles/filtered-temples.css">
     <link rel="stylesheet" href="styles/filtered-temples-large.css">
     <script src="scripts/filtered-temples.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@400;700;800&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
 </head>
 <body>
