attempted to fix performance issues

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -11,7 +11,7 @@
     <script src="scripts/filtered-temples.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;700;800&display=swap"
         rel="stylesheet">
 </head>
 <body>
