--- a/form.html
+++ b/form.html
@@ -29,11 +29,11 @@
             <fieldset>
                 <legend><span class="required">*</span> Overall Rating</legend>
                 <div class="stars">
-                    <label><input type="radio" id="onestar" name="stars" value="⭐" required> ⭐</label>
-                    <label><input type="radio" id="twostar" name="stars" value="⭐⭐" required> ⭐⭐</label>
-                    <label><input type="radio" id="threestar" name="stars" value="⭐⭐⭐" required> ⭐⭐⭐</label>
-                    <label><input type="radio" id="fourstar" name="stars" value="⭐⭐⭐⭐" required> ⭐⭐⭐⭐</label>
-                    <label><input type="radio" id="fivestar" name="stars" value="⭐⭐⭐⭐⭐" required> ⭐⭐⭐⭐⭐</label>
+                    <label>⭐<input type="radio" id="onestar" name="stars" value="1" required></label>
+                    <label>⭐⭐<input type="radio" id="twostar" name="stars" value="2" required></label>
+                    <label>⭐⭐⭐<input type="radio" id="threestar" name="stars" value="3" required></label>
+                    <label>⭐⭐⭐⭐<input type="radio" id="fourstar" name="stars" value="4" required></label>
+                    <label>⭐⭐⭐⭐⭐<input type="radio" id="fivestar" name="stars" value="5" required></label>
                 </div>
             </fieldset>
             <fieldset>
