--- a/form.html
+++ b/form.html
@@ -22,30 +22,42 @@
         <form action="review.html" method="get">
             <fieldset>
                 <legend><span class="required">*</span> Product Name</legend>
-                <label><select id="products" name="products" required>
+                <label for="products"></label>
+                <select id="products" name="products" required>
                         <option value="" disabled selected>Select a Product...</option>
-                    </select></label>
+                    </select>
             </fieldset>
             <fieldset>
                 <legend><span class="required">*</span> Overall Rating</legend>
                 <div class="stars">
-                    <label>⭐<input type="radio" id="onestar" name="stars" value="1" required></label>
-                    <label>⭐⭐<input type="radio" id="twostar" name="stars" value="2" required></label>
-                    <label>⭐⭐⭐<input type="radio" id="threestar" name="stars" value="3" required></label>
-                    <label>⭐⭐⭐⭐<input type="radio" id="fourstar" name="stars" value="4" required></label>
-                    <label>⭐⭐⭐⭐⭐<input type="radio" id="fivestar" name="stars" value="5" required></label>
+                    <input type="radio" id="onestar" name="stars" value="1" required>
+                    <label for="onestar"></label>
+                    <input type="radio" id="twostar" name="stars" value="2" required>
+                    <label for="twostar"></label>
+                    <input type="radio" id="threestar" name="stars" value="3" required>
+                    <label for="threestar"></label>
+                    <input type="radio" id="fourstar" name="stars" value="4" required>
+                    <label for="fourstar"></label>
+                    <input type="radio" id="fivestar" name="stars" value="5" required>
+                    <label for="fivestar"></label>
                 </div>
             </fieldset>
             <fieldset>
                 <legend><span class="required">*</span> Date of Installation</legend>
-                <label><input type="date" id="date" name="date" required></label>
+                <label for="date"></label>
+                <input type="date" id="date" name="date" required>
             </fieldset>
             <fieldset>
                 <legend>Which features did you find useful in the product? <span class="em">(Check all that apply)</span></legend>
-                <label><input type="checkbox" id="durability" name="durability" value="yes"> Durability</label>
-                <label><input type="checkbox" id="ease" name="ease" value="yes"> Ease of Use</label>
-                <label><input type="checkbox" id="performance" name="performance" value="yes"> Performance</label>
-                <label><input type="checkbox" id="design" name="design" value="yes"> Design</label>
+                <div class="checks">
+                    <input type="checkbox" id="durability" name="durability" value="yes"><label for="durability">Durability</label>
+                    <input type="checkbox" id="ease" name="ease" value="yes">
+                    <label for="ease">Ease of Use</label>
+                    <input type="checkbox" id="performance" name="performance" value="yes">
+                    <label for="performance">Performance</label>
+                    <input type="checkbox" id="design" name="design" value="yes">
+                    <label for="design">Design</label>
+                </div>
             </fieldset>
             <fieldset>
                 <legend>Written Review</legend>
