--- a/form.html
+++ b/form.html
@@ -61,10 +61,12 @@
             </fieldset>
             <fieldset>
                 <legend>Written Review</legend>
+                <label for="writtenreview"></label>
                 <textarea id="writtenreview" name="writtenreview" rows="4" placeholder="Type your review here..."></textarea>
             </fieldset>
             <fieldset>
                 <legend>Your Name</legend>
+                <label for="name"></label>
                 <input type="text" id="name" name="name">
             </fieldset>
             <input type="submit" value="Post My Review">
