review confirmation page

--- a/review.html
+++ b/review.html
@@ -7,6 +7,10 @@
     <meta name="description" content="Confirmation Page for W5 Product Review Form Assignment for WDD131 at BYU-Idaho">
     <meta name="author" content="April Cleaver">
     <link rel="stylesheet" href="styles/review.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,700;1,800&display=swap"
+        rel="stylesheet">
     <script src="scripts/review.js" defer></script>
 </head>
 <body>
@@ -14,7 +18,7 @@
         <h1>Review Posted!</h1>
     </header>
     <main>
-        <p class="label">Reviews Posted: <span class="numreviews"></span></p> 
+        <p class="label">Number of Reviews Posted: <span class="numreviews"></span></p> 
     </main>
     <footer>
         <p>© <span id="currentyear"></span> April Cleaver | Washington, USA </p>
