--- a/review.html
+++ b/review.html
@@ -19,6 +19,7 @@
     </header>
     <main>
         <p class="label">Number of Reviews Posted: <span class="numreviews"></span></p> 
+        <a href="form.html"><button>Review Another Product</button></a>
     </main>
     <footer>
         <p>© <span id="currentyear"></span> April Cleaver | Washington, USA </p>
