--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD131 Project: Artist Portfolio</title>
+    <title>Siteplan- WDD131 Project: Artist Portfolio</title>
     <meta name="description" content="An artist portfolio website created by April cleaver for WDD131 - Dynamic Web Fundamentals at BYU-Idaho">
     <meta name="author" content="April Cleaver">
     <link rel="stylesheet" href="styles/siteplan.css">
