homepage picture source changes

--- a/project/index.html
+++ b/project/index.html
@@ -46,8 +46,10 @@
             </div>
         </section>
         <section class="shortbio">
-            <picture class="heroimg">
-                <source media="(min-width: 700px)" srcset="images/ac-cartoon-medium.webp">
+            <picture>
+                <source media="(min-width: 900px)" srcset="images/ac-cartoon-small.webp">
+                <source media="(min-width: 820px)" srcset="images/ac-cartoon-square.webp">
+                <source media="(min-width: 700px)" srcset="images/ac-cartoon-portrait.webp">
                 <img src="images/ac-cartoon-small.webp" alt="Cartoon drawing of a woman playing a ukulele" width="500"
                     height="300" loading="lazy">
             </picture>
