--- a/project/index.html
+++ b/project/index.html
@@ -18,8 +18,10 @@
 </head>
 <body>
     <header>
-        <img src="images/logo-small.webp" alt="April Cleaver Illustration logo">
-        <h1>April Cleaver Illustration</h1>
+        <div class="logo">
+            <img src="images/logo-small.webp" alt="April Cleaver Illustration logo">
+            <h1>April Cleaver Illustration</h1>
+        </div>
         <button id="menu" aria-label="navigation menu"></button>
         <nav>
             <ul class="navigation">
@@ -27,7 +29,6 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
     </header>
