--- a/project/portfolio.html
+++ b/project/portfolio.html
@@ -13,15 +13,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@1,600&family=Poppins:wght@400;800&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@1,600&family=Poppins:wght@400;600;800&display=swap"
         rel="stylesheet">
     <script src="scripts/portfolio.js" defer></script>
 </head>
 
 <body>
     <header>
-        <img src="images/logo-small.webp" alt="April Cleaver Illustration logo">
-        <h1>April Cleaver Illustration</h1>
+        <div class="logo">
+            <img src="images/logo-small.webp" alt="April Cleaver Illustration logo">
+            <h1>April Cleaver Illustration</h1>
+        </div>
         <button id="menu" aria-label="navigation menu"></button>
         <nav>
             <ul class="navigation">
@@ -29,7 +31,6 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
     </header>
