contact & confirmation pages

--- a/project/index.html
+++ b/project/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@1,600&family=Poppins:wght@400;800&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@1,600&family=Poppins:wght@400;600;800&display=swap"
         rel="stylesheet">
     <script src="scripts/index.js" defer></script>
 </head>
@@ -48,10 +48,10 @@
         </section>
         <section class="shortbio">
             <picture>
-                <source media="(min-width: 900px)" srcset="images/ac-cartoon-small.webp">
-                <source media="(min-width: 820px)" srcset="images/ac-cartoon-square.webp">
-                <source media="(min-width: 700px)" srcset="images/ac-cartoon-portrait.webp">
-                <img src="images/ac-cartoon-small.webp" alt="Cartoon drawing of a woman playing a ukulele" width="500"
+                <source media="(min-width: 900px)" srcset="images/cartoon-sm.webp">
+                <source media="(min-width: 820px)" srcset="images/cartoon-sq.webp">
+                <source media="(min-width: 700px)" srcset="images/cartoon-portrait.webp">
+                <img src="images/cartoon-sm.webp" alt="Cartoon drawing of a woman playing a ukulele" width="500"
                     height="300" loading="lazy">
             </picture>
             <div class="bio">
