--- a/project/success.html
+++ b/project/success.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - WDD131 Project: Artist Portfolio Website</title>
+    <title>Success! WDD131 Project: Artist Portfolio Website</title>
     <meta name="description"
-        content="Portfolio page for an artist portfolio website created by April cleaver for WDD131 - Dynamic Web Fundamentals at BYU-Idaho">
+        content="Successful form submission page for an artist portfolio website created by April cleaver for WDD131 - Dynamic Web Fundamentals at BYU-Idaho">
     <meta name="author" content="April Cleaver">
     <link rel="stylesheet" href="styles/project.css">
     <link rel="stylesheet" href="styles/project-large.css">
@@ -15,7 +15,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@1,600&family=Poppins:wght@400;600;800&display=swap"
         rel="stylesheet">
-    <script src="scripts/portfolio.js" defer></script>
+    <script src="scripts/success.js" defer></script>
 </head>
 
 <body>
@@ -35,12 +35,11 @@
         </nav>
     </header>
     <main>
-        <ul class="submenu">
-            <li><a href="#" id="all">All</a></li>
-            <li><a href="#" id="realistic">Realistic</a></li>
-            <li><a href="#" id="whimsical">Whimsical</a></li>
-        </ul>
-        <div class="art-grid"></div>
+        <div class="heading success">
+            <h2>Message sent!</h2>
+            <p>Please allow 24-48 hours for a reply.</p>
+            <span id="messages"></span>
+        </div>
     </main>
     <footer>
         <div class="footertext">
