--- a/project/contact.html
+++ b/project/contact.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - WDD131 Project: Artist Portfolio Website</title>
+    <title>Contact - April Cleaver Illustration</title>
     <meta name="description"
-        content="Contact page for an artist portfolio website created by April cleaver for WDD131 - Dynamic Web Fundamentals at BYU-Idaho">
+        content="Contact page for April Cleaver Illustration: Want to work with April? Get in touch through the form on this page.">
     <meta name="author" content="April Cleaver">
     <link rel="stylesheet" href="styles/project.css">
     <link rel="stylesheet" href="styles/project-large.css">
