--- a/project/index.html
+++ b/project/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD131 Project: Artist Portfolio Website</title>
+    <title>April Cleaver Illustration</title>
     <meta name="description"
-        content="An artist portfolio website created by April cleaver for WDD131 - Dynamic Web Fundamentals at BYU-Idaho">
+        content="Home page for April Cleaver Illustration: Get to know April, a digital artist and illustrator located in the Pacific Northwest.">
     <meta name="author" content="April Cleaver">
     <link rel="stylesheet" href="styles/project.css">
     <link rel="stylesheet" href="styles/project-large.css">
@@ -57,7 +57,7 @@
             <div class="bio">
                 <p>Tucked away in the misty forests of the Pacific Northwest, April Cleaver spends most days sketching on an iPad and turning everyday adventures into colorful illustrations. When not drawing, she's probably hiking a trail, making
                 questionable sounds on a new musical instrument, or laughing with family. Her art is fueled by curiosity, a love of nature, and the joy of experimenting—whether that's with brush strokes or guitar strings.</p>
-                <a id="readmore" href="/about.html">Read more about April >></a>
+                <a id="readmore" href="about.html">Read more about April >></a>
             </div>
         </section>
     </main>
