--- a/project/portfolio.html
+++ b/project/portfolio.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - WDD131 Project: Artist Portfolio Website</title>
+    <title>Portfolio - April Cleaver Illustration</title>
     <meta name="description"
-        content="Portfolio page for an artist portfolio website created by April cleaver for WDD131 - Dynamic Web Fundamentals at BYU-Idaho">
+        content="Portfolio page for April Cleaver Illustration: Explore April's World of Whimsy and fall in love with her magical illustrations.">
     <meta name="author" content="April Cleaver">
     <link rel="stylesheet" href="styles/project.css">
     <link rel="stylesheet" href="styles/project-large.css">
