--- a/project/success.html
+++ b/project/success.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Success! WDD131 Project: Artist Portfolio Website</title>
+    <title>Message Sent! - April Cleaver Illustration</title>
     <meta name="description"
-        content="Successful form submission page for an artist portfolio website created by April cleaver for WDD131 - Dynamic Web Fundamentals at BYU-Idaho">
+        content="Successful form submission page for April Cleaver Illustration.">
     <meta name="author" content="April Cleaver">
     <link rel="stylesheet" href="styles/project.css">
     <link rel="stylesheet" href="styles/project-large.css">
@@ -38,7 +38,7 @@
         <div class="heading success">
             <h2>Message sent!</h2>
             <p>Please allow 24-48 hours for a reply.</p>
-            <span id="messages"></span>
+            <p><span id="messages"></span></p>
         </div>
     </main>
     <footer>
